--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ notifications:
   email:
     - jhammack@tenable.com
     - aweber@tenable.com
+    - mcoumbes@tenable.com
+    - aorr@tenable.com
 
 before_install:
   - gem --version
